[tool.poetry]
name = "automation"
version = "0.1.0"
description = ""
authors = ["Jongkook Choi <jongkook90@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
konlpy = "^0.5.2"
tensorflow = "^2.3.1"
bert-for-tf2 = "^0.14.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
